make pic larger

--- a/notebooks/d_geosciences/Continental Tectonics/Isostasy.ipynb
+++ b/notebooks/d_geosciences/Continental Tectonics/Isostasy.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Balance pressure, ${\\rho}gh$, at base of columns.<br>\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/isostasy.png\" style=\"width:400px;height:200px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/isostasy.png\"  style= \"width: 60%\" align=\"center\"/></p>\n",
     "\n",
     "If continental crust (${\\rho}_{c} = 2.8\\,g\\,cm^{-3}$) floated alone on top of mantle material (${\\rho}_{m} = 3.3\\,g\\,cm^{-3}$), we must account for the oceanic crust (${\\rho}_{o} = 2.9\\,g\\,cm^{-3}$) and the ocean water (${\\rho}_{w} = 1.0\\,g\\,cm^{-3}$) that also floaton the mantle. Since these two layers fill up the basins around the continents, we must subtract from the continental elevation the height $h$ that each of those layers alone would float above the mantle, given by its buoyancy factor times its thickness. The isostatic equation for continents therefore has three terms, one positive and two negative:\n",
     "\n",
@@ -57,7 +57,7 @@
     "\n",
     "Seismological and geochemical data indicate that the crust is $7.1\\,km$ thick at the ridge. It is reasonable to assume that the asthenosphere has a density of $3.2\\,g\\,cm^{-3}$, the lithospheric mantle has a density of $3.3\\,g\\,cm^{-3}$ and oceanic crust has a density of $2.8\\,g\\,cm^{-3}$. Density of seawater is ∼ $1.03\\,g\\,cm^{-3}$.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/prac1.png\" style=\"width:600px;height:400px\" align=\"center\"/></p>"
+    "<p style=\"text-align:center;\"><img src=\"images/prac1.png\"  style= \"width: 100%\" align=\"center\"/></p>"
    ]
   },
   {
