--- a/notebooks/d_geosciences/Continental Tectonics/Ridge_Push_and_Slab_Pull.ipynb
+++ b/notebooks/d_geosciences/Continental Tectonics/Ridge_Push_and_Slab_Pull.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "To test these two competing hypotheses, scientists have looked for “lithospheric graveyards” below convergent boundaries where plates have been subducted. Old subducted lithosphere is colder than the surrounding mantle and can therefore be “seen” using seismic waves. Moreover, there should be lots of it down there. From our knowledge of past plate movements, we can estimate that, just since the breakup of Pangaea, lithosphere equivalent to the surface area of Earth has been recycled into the mantle. Sure enough, scientists have found regions of colder material in the deep mantle under North and South America, eastern Asia, and other sites adjacent to convergent boundaries. These zones occur as extensions of descending lithospheric slabs, and some appear to go down as far as the coremantle boundary. From this evidence, most scientists have concluded that plate recycling takes place through wholemantle convection rather than stratified convection.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/platerecycle.png\" style=\"width:400px;height:200px\" align=\"center\"/></p>"
+    "<p style=\"text-align:center;\"><img src=\"images/platerecycle.png\"  style= \"width: 60%\" align=\"center\"/></p>"
    ]
   },
   {
