--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture7_Pipe_Flow_with_Heat.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture7_Pipe_Flow_with_Heat.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/P626.PNG' width = 700></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/P626.PNG' style= \"width: 70%\"></p>\n",
     "\n",
     "Figure 8.1"
    ]
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/P626_4.PNG' width = 700></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/P626_4.PNG' style= \"width: 90%\"></p>\n",
     "\n",
     "Figure 8.2"
    ]
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/P626_5.PNG' width = 700></p>"
+    "<p style=\"text-align:center;\"><img src='img/P626_5.PNG' style= \"width: 90%\"></p>"
    ]
   },
   {
