--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture8_Part1_Navier_Stoke_Equation.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture8_Part1_Navier_Stoke_Equation.ipynb
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/controlVolume3.PNG' width = 500></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/controlVolume3.PNG' style= \"width: 70%\"></p>\n",
     "\n",
     "Figure 1: Infinitesimal control volume $V$ (left) and Cartesian coordinate system (right). Examples of stresses acting on different planes and directions are also shown. "
    ]
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/stresses_x_axis1.PNG' width=700></p>"
+    "<p style=\"text-align:center;\"><img src='img/stresses_x_axis1.PNG' style= \"width: 100%\"></p>"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/shear_stress.PNG' width=700></p>"
+    "<p style=\"text-align:center;\"><img src='img/shear_stress.PNG' style= \"width: 100%\"></p>"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/normal_stress.PNG' width=400></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/normal_stress.PNG' style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 4"
    ]
