--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
@@ -744,7 +744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/mantle_convection_thermal.PNG' width=600></p>"
+    "<p style=\"text-align:center;\"><img src='img/mantle_convection_thermal.PNG' style= \"width: 80%\"></p>"
    ]
   },
   {
