--- a/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Mixed layer.ipynb
+++ b/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Mixed layer.ipynb
@@ -33,8 +33,7 @@
    "source": [
     "The mixed layer is mixed by the winds on the surface creating a homogeneous layer. It is being mixed by wind stress, eddies, kinematic viscosity and convection. The stronger the winds, the deeper the mixed layer. The mixed layer is deeper in the Winter than in Summer. In the Winter, the surface water cooles so it becomes denser causing convection as it is more dense than the layer below. More turbulence also deepens the mixed layer.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"https://www.coexploration.org/bermuda/assets/images/thermocline.jpg\" alt=\"image info\" width=\"400\" \n",
-    "     height=\"400\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.coexploration.org/bermuda/assets/images/thermocline.jpg\" alt=\"image info\" style= \"width: 70%\"/></p>\n",
     "\n",
     "\n",
     "\n",
