--- a/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Tides.ipynb
+++ b/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Tides.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "We would like to find Moon's gravity influence on an arbitrary point $P$ at Earth's surface:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/tides_earth_moon.png\" style=\"width:400px;height:210px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/tides_earth_moon.png\" style= \"width: 60%\" align=\"center\"/></p>\n",
     "\n",
     "From the cosine law, we know:\n",
     "\n",
@@ -131,7 +131,7 @@
    "source": [
     "Horizontal force can change its sign when $\\phi$ is zero and when $\\phi = \\pm\\pi/2$. This explains why it has two bulges on Earth's surface.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/tides_forces.png\" style=\"width:400px;height:500px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/tides_forces.png\" style= \"width: 70%\" align=\"center\"/></p>\n",
     "\n",
     "Let's plot how these forces change with latitude ($\\phi$):"
    ]
@@ -262,7 +262,7 @@
     "\n",
     "Moon does not rotate exactly above the equator, so our equations need to be corrected for the angle $d_l$ (declination of the Moon north of the equator) and $C_p$ (the Moon's \"hour\" angle):\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/tides_moon_declination.png\" style=\"width:600px;height:320px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/tides_moon_declination.png\" style= \"width: 100%\" align=\"center\"/></p>\n",
     "\n",
     "Therefore, the new formula for potential is:\n",
     "\n",
@@ -295,9 +295,9 @@
     "\n",
     "These frequencies are known and can be looked up in a table.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/tides_frequencies_1.png\" style=\"width:600px;height:350px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/tides_frequencies_1.png\" style= \"width: 90%\" align=\"center\"/></p>\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/tides_frequencies_2.png\" style=\"width:600px;height:350px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/tides_frequencies_2.png\" style= \"width: 90%\" align=\"center\"/></p>\n",
     "\n",
     "\n",
     "## Tidal frequencies\n",
@@ -310,7 +310,7 @@
     "\n",
     "$$\\omega_0-\\omega_1=\\omega_2-\\omega_3 \\rightarrow M_2, S_2.$$\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/tides_principal_constituents.png\" style=\"width:600px;height:450px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/tides_principal_constituents.png\" style= \"width: 80%\" align=\"center\"/></p>\n",
     "\n",
     "Using $M_2$ and $S_2$, we can plot semi-diurnal and spring-neap cycles:"
    ]
