--- a/notebooks/d_geosciences/Gravity, Magnetism, and Orbital Dynamics/Keplerian_Orbits.ipynb
+++ b/notebooks/d_geosciences/Gravity, Magnetism, and Orbital Dynamics/Keplerian_Orbits.ipynb
@@ -35,15 +35,15 @@
     "\n",
     "The analytical solution to this equation reveals trajectories of bodies to be of conical sections:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/conic_sections.png\" style=\"width:300px;height:330px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/conic_sections.png\" style= \"width: 50%\" align=\"center\"/></p>\n",
     "\n",
     "For three body problem, only in restricted cases analytical solutions can be found. One of such cases is when a test particle is placed in a system that does not move with respect to the centre of mass of the system and does not rotate with respect to itself:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/restricted_three_body_problem.png\" style=\"width:400px;height:200px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/restricted_three_body_problem.png\" style= \"width: 60%\" align=\"center\"/></p>\n",
     "\n",
     "The solution to this problem reveals Lagrangian equilibrium points, where the test particle will maintain its position relative to larger bodies:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/lagrangian_points.png\" style=\"width:400px;height:400px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/lagrangian_points.png\" style= \"width: 60%\" align=\"center\"/></p>\n",
     "\n",
     "## Restricted three-body problem - numerical solution\n",
     "\n",
