--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Isotope_Systematics_of_Mixing.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Isotope_Systematics_of_Mixing.ipynb
@@ -184,7 +184,7 @@
     "\n",
     "The isotopic mixing line is straight only if $K = 1$. In all other cases, mixing generates curves.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/M1.png\" style=\"width:550px;height:500px\" /></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/M1.png\" style= \"width: 70%\" /></p>\n",
     "\n",
     "Some additional comments …\n",
     "\n",
