--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Nuclides.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Nuclides.ipynb
@@ -67,14 +67,14 @@
     "\n",
     "Example:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/N1.png\" style=\"width:350px;height:100px\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/N1.png\" style= \"width: 50%\"/></p>\n",
     "\n",
     "The chart of nuclides groups the isotopes in a plot of proton number $Z$ vs. neutron number $N$. The chart provides information on all $264$ known stable isotopes, long-lived radioactive nuclides, and a large number of short and very short-lived radioactive nuclides. The top figure is only a\n",
     "small excerpt from the complete chart at the bottom!\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/N2.png\" style=\"width:500px;height:450px\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/N2.png\" style= \"width: 80%\"/></p>\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/N3.png\" style=\"width:500px;height:400px\" align=\"center\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/N3.png\" style= \"width: 80%\" align=\"center\"/></p>\n",
     "\n",
     "Note that:\n",
     "\n",
