--- a/notebooks/d_geosciences/High-Temperature Geochemistry/U-Th-Pb_Decay.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/U-Th-Pb_Decay.ipynb
@@ -445,7 +445,7 @@
     "\n",
     "The concordia diagram is a plot of ${^{206}Pb^*}/{^{238}U}$ vs. ${^{207}Pb^*}/{^{235}U}$ (see below). $Pb^*$ represents the radiogenic $Pb$ only. \n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/UThPb1.png\" style=\"width:500px;height:350px\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/UThPb1.png\" style= \"width: 70%\"/></p>\n",
     "\n",
     "The basic decay equation for the ${^{238}U}$-${^{206}Pb}$ decay system is:\n",
     "\n",
@@ -474,11 +474,11 @@
     "\n",
     "Let’s again use the example of the $4\\,Gyr$ old zircons. These zircons are now assumed to have experienced $Pb$ loss due to a metamorphic event that occurred at $3\\,Ga$. If the loss of $Pb$ was complete, the zircons would plot at the origin - they would be indistinguishable from new zircons that formed at $3.0\\,Ga$. Such a complete loss of $Pb$ is very uncommon, however. More common is a partial loss of $Pb$, which leads to a partial resetting of the $Pb^*/U$ ratios for the zircons. Our example features three $4\\,Ga$ zircons that have lost ~$40$ to $60\\%$ of their radiogenic $Pb$ at $3.0\\,Ga$. This partial $Pb$ loss will move the points down from the concordia along a straight line to the origin. The zircons are now discordant and they plot on a straight line called **discordia**. Note the ages of the intercepts of concordia & discordia! The exact position on the discordia for a particular zircon is determined by the fraction of Pb that is lost during open system behavior.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/UThPb2.png\" style=\"width:450px;height:280px\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/UThPb2.png\" style= \"width: 60%\"/></p>\n",
     "\n",
     "If we now wait for $3\\,Gyr$ and let the zircons further evolve isotopically, the concordia diagram will look as shown below. \n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/UThPb3.png\" style=\"width:450px;height:280px\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/UThPb3.png\" style= \"width: 60%\"/></p>\n",
     "\n",
     "The discordia remains a line that intercepts the concordia at $4\\,Ga$ and $3\\,Ga$, which are the ages of (i) zircon formation/crystallization and (ii) the metamorphic event. This is brilliant because we can obtain the ages of both events with a single measurement! \n",
     "\n",
