--- a/notebooks/d_geosciences/Miscellaneous/Seafloor_ages.ipynb
+++ b/notebooks/d_geosciences/Miscellaneous/Seafloor_ages.ipynb
@@ -16,7 +16,7 @@
     "```\n",
     "The fundamental theory behind behaviour of the Earth's outer shell, the lithosphere, is called plate tectonics. The lithosphere is broken into multiple plates that interact at their boundaries. There are three types of this interaction: plates can converge, diverge or move along their boundaries.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/plate_boundaries.png\" style= \"width: 60%\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/plate_boundaries.png\" style= \"width: 100%\"></p>\n",
     "\n",
     "### Mid-ocean ridges - the divergent boundary\n",
     "\n",
@@ -24,11 +24,11 @@
     "\n",
     "The Earth's magnetic field is not constant over time. On average, $4$ or $5$ magnetic reversals happen within $1$ million years. These reversals are recorded on the seafloor as new rocks produced at mid-ocean ridges have magnetite aligned with magnetic field as they cool on the surface:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/magnetic_field_seafloor.png\" style= \"width: 60%\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/magnetic_field_seafloor.png\" style= \"width: 80%\"></p>\n",
     "\n",
     "Magnetic anomalies can tell us about the age of the seafloor. These anomalies have been very well mapped across the world and dating techniques such as radioactive decay of Potassium and Argon make their age estimates very precise. As seen on the picture below, the Bruhnes is the latest magnetic reversal that happened ~$800,000$ years ago:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/magnetic_anomalies.png\" style= \"width: 60%\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/magnetic_anomalies.png\" style= \"width: 80%\"></p>\n",
     "\n",
     "## Exercise\n",
     "### Seafloor age vs. depth relationship\n",
@@ -130,7 +130,7 @@
    "source": [
     "The dataset is really large, therefore, we will only display the end result here. Note how easily we can pick out the position of Mid-Atlantic ridge tracing the youngest rocks (red colours) in the Atlantic. The oldest rocks are coloured in magenta and occur at the continental margins and in the Pacific.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/Mueller_2008_map.png\" style= \"width: 60%\"></p>\n"
+    "<p style=\"text-align:center;\"><img src=\"images/Mueller_2008_map.png\" style= \"width: 80%\"></p>\n"
    ]
   },
   {
@@ -516,7 +516,7 @@
    "source": [
     "As we can see on the graph, curve for ages below $70\\,Ma$ fits the ETOPO1 data reasonably well, as equation predicts. However, let's quantify the root mean square error for the dataset:\n",
     "\n",
-    "$$ \\text{RMS Error} = \\sqrt{\\frac{\\sum_{i=1}^{n} (\\text{predicted value}- \\text{observed value})^2}{n}} $$,\n",
+    "$$ \\text{RMS Error} = \\sqrt{\\frac{\\sum_{i=1}^{n} (\\text{predicted value}- \\text{observed value})^2}{n}} $$\n",
     "\n",
     "where $n$ is the number of samples.\n",
     "\n",
@@ -619,7 +619,7 @@
     "\n",
     "To calculate seafloor age from ETOPO1 bathymetry data we will need to rearrange the original equation:\n",
     "\n",
-    "$$t = \\left(\\frac{d(t) - 2500}{350}\\right)^2.$$\n",
+    "$$t = \\left(\\frac{d(t) - 2500}{350}\\right)^2$$\n",
     "\n",
     "This time we will apply the equation to the entire bathymetry data from ETOPO1. We can use the _shape_ function to see how the data is structured:"
    ]
@@ -777,7 +777,7 @@
    "source": [
     "Comparing real seafloor age and age calculated based on depth, we can see that the relationship does not work for ages above $70\\,Ma$. In the real age dataset, we can see that seafloor near continental margins is older than $140\\,Ma$, while according to the equation from Parsons & Sclatter (1977), the seafloor there should be very young.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"images/seafloor_ages_north_atlantic_comparison.png\" style= \"width: 60%\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/seafloor_ages_north_atlantic_comparison.png\" style= \"width: 80%\"></p>\n",
     "\n",
     "## References\n",
     "* Material used in this notebook was based on plate tectonics lecture content of Dynamic Earth module at Earth Science and Engineering Department"
