--- a/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
+++ b/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "A summary of the wave properties can be seen in the figure below:\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"http://hyperphysics.phy-astr.gsu.edu/hbase/imgmec/shm.gif\" alt=\"image info\" style= \"width: 40%\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"http://hyperphysics.phy-astr.gsu.edu/hbase/imgmec/shm.gif\" alt=\"image info\" style= \"width: 70%\"/></p>\n",
     "\n",
     "Selection of wave properties:\n",
     "   - $t$ -- time\n",
@@ -263,7 +263,7 @@
    "source": [
     "To derive the wave equation, a string with density $\\rho$ per unit length is stretched in the $x$ direction with tension force $T$. A wave can be described as coupled simple harmonic motion. This can be thought of as a rope with lots of masses being displaced individually.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"https://media.springernature.com/lw685/springer-static/image/chp%3A10.1007%2F978-3-030-44787-8_3/MediaObjects/333528_2_En_3_Fig1_HTML.png\" alt=\"wave equation\" style= \"width: 40%\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://media.springernature.com/lw685/springer-static/image/chp%3A10.1007%2F978-3-030-44787-8_3/MediaObjects/333528_2_En_3_Fig1_HTML.png\" alt=\"wave equation\" style= \"width: 70%\"/></p>\n",
     "     \n",
     "The vertical forces on the string must balance. \n",
     "\n",
@@ -305,7 +305,7 @@
     "\n",
     "$f(x+ct)$ is the shape of $f(x)$ when travelling to the left at speed $c$.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"https://la.mathworks.com/matlabcentral/mlc-downloads/downloads/submissions/59621/versions/1/screenshot.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n"
+    "<p style=\"text-align:center;\"><img src=\"https://la.mathworks.com/matlabcentral/mlc-downloads/downloads/submissions/59621/versions/1/screenshot.gif\" alt=\"wave equation\" style= \"width: 80%\"/></p>\n"
    ]
   },
   {
@@ -333,7 +333,7 @@
     "\n",
     "- Transverse wave: waves where motion of all points oscillate in a path that is perpendicular to the direction of the travelling wave. Examples are seismic S-waves, electro-magnetic waves and vibrations on string.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"https://www.physicslens.com/wp-content/uploads/2022/03/longitudinal-transverse-waves.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.physicslens.com/wp-content/uploads/2022/03/longitudinal-transverse-waves.gif\" alt=\"wave equation\" style= \"width: 80%\"/></p>\n",
     "\n",
     "```{index} Surface waves\n",
     "```\n",
@@ -346,16 +346,15 @@
     "*Surface waves*\n",
     "- Love wave: wave moving horizontally and perpendicular to the direction of travel.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Love-wave.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Love-wave.gif\" alt=\"wave equation\" style= \"width: 80%\"/></p>\n",
     "\n",
     "- Rayleigh wave: wave causing elliptical retrograde motion (opposite to direction of travel) in the vertical plane along direction of travel as a combination of both longitudinal and transverse vibration.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Rayleigh-wave.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Rayleigh-wave.gif\" alt=\"wave equation\" style= \"width: 80%\"/></p>\n",
     "\n",
     "- Water wave: circular motion of elements moving in the same direction of wave travel.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"https://upload.wikimedia.org/wikipedia/commons/4/4a/Deep_water_wave.gif\" alt=\"wave equation\" width=\"400\" \n",
-    "     height=\"500\"/></p>"
+    "<p style=\"text-align:center;\"><img src=\"https://upload.wikimedia.org/wikipedia/commons/4/4a/Deep_water_wave.gif\" alt=\"wave equation\" style= \"width: 80%\"/></p>"
    ]
   },
   {
