--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture5_1D_Pipe_Flow.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src=\"img/F61.PNG\" width=\"500\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F61.PNG\"  style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle."
    ]
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src=\"img/F62.PNG\" width=\"500\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F62.PNG\"  style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 6.3: Unidirectional ﬂow of a constant thickness layer of viscous ﬂuid down an inclined plane."
    ]
@@ -606,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src=\"img/F66.PNG\" width=\"600\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F66.PNG\"  style= \"width: 70%\"></p>\n",
     "\n",
     "Figure 6.6: Poiseuille ﬂow through a circular pipe."
    ]
@@ -854,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src=\"img/F69.PNG\" width=\"400\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F69.PNG\"  style= \"width: 50%\"></p>\n",
     "\n",
     "Figure 6.9: A semicircular aquifer with a circular cross section (a toroid). A hydrostatic head b is available to drive the ﬂow.\n"
    ]
@@ -958,7 +958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src=\"img/Rising_Magma1.PNG\" width=\"500\"></p>\n",
+    "<p style=\"text-align:center;\"><img src=\"img/Rising_Magma1.PNG\"  style= \"width: 70%\"></p>\n",
     "\n",
     "Figure 6.10"
    ]
