--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture6_Non_Linear_Viscosity_2D_Stokes.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture6_Non_Linear_Viscosity_2D_Stokes.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/strain_fluid.PNG' width=500></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/strain_fluid.PNG'  style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 7.1: Shear strain in the fluid is measured by the displacement $dx$ between two nearby layers with a distance of $dy$."
    ]
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/stress_strainRate.PNG' width=500></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/stress_strainRate.PNG'  style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 7.2: the gradient of the figure on the left hand side represents the inversity of viscosity. Dash line on the figure at the right represents the effective viscosity that changes with stress."
    ]
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/1d_ChannelFlow.PNG' width =700></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/1d_ChannelFlow.PNG'  style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 7.3: The velocity profile is symmetric due to the boundary conditions and the geometry of the channel."
    ]
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/P7_12.PNG' width='500'></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/P7_12.PNG'  style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 7.4: Icesheet with thickness $h$ on sloping bedrock, creeping downhill under its own weight. The temperature profile is linear and $(T_1-T_0)/T_0$ is small. It is no-slip at base."
    ]
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/1d_ChannelFlow3.PNG' width=500></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/1d_ChannelFlow3.PNG'  style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 7.5: One-dimensional Channel Flow."
    ]
@@ -785,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src='img/1d_ChannelFlow5.PNG' width=500></p>\n",
+    "<p style=\"text-align:center;\"><img src='img/1d_ChannelFlow5.PNG' style= \"width: 60%\"></p>\n",
     "\n",
     "Figure 7.6: Volumetric Flow Rate of One-dimensional Channel Flow (with the width of z-direction equals 1)."
    ]
