--- a/notebooks/d_geosciences/Waves/Refraction.ipynb
+++ b/notebooks/d_geosciences/Waves/Refraction.ipynb
@@ -45,8 +45,7 @@
     "The phase of a wave compared to other waves in superposition or in the group is an important property. Waves for example can have the same function of movement, but can be half a wavelength apart if they are in anti-phase.\n",
     "\n",
     "It also gives rise to definitions of **wavefront**, which are contours of joining parts of waves that are all in phase. A **ray** is perpendicular to that front and dictates the direction of travel.\n",
-    "<img src=\"https://www.nist.gov/sites/default/files/images/2022/01/27/phase-difference.gif\" alt=\"image info\" width=\"500\" \n",
-    "     height=\"500\"/>"
+    "<img src=\"https://www.nist.gov/sites/default/files/images/2022/01/27/phase-difference.gif\" alt=\"image info\" style= \"width: 80%\"/>"
    ]
   },
   {
@@ -60,7 +59,7 @@
     "\n",
     "When waves get superimposed, their phase needs to be considered. For example, when waves are exactly $180$ degrees or $\\pi$ out of phase, destructive interference occurs. If the waves are in phase, constructive interference occurs.\n",
     "\n",
-    "<p style=\"text-align:center;\"><img src=\"http://waveskms.weebly.com/uploads/2/0/6/9/20699724/9139460_orig.gif\" alt=\"image info\" style= \"width: 40%\"/></p>"
+    "<p style=\"text-align:center;\"><img src=\"http://waveskms.weebly.com/uploads/2/0/6/9/20699724/9139460_orig.gif\" alt=\"image info\" style= \"width: 70%\"/></p>"
    ]
   },
   {
@@ -180,7 +179,7 @@
    "id": "5e5bb7c1",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center;\"><img src=\"https://galileounbound.files.wordpress.com/2020/01/snellslaw.jpg?w=2400\" alt=\"image info\" style= \"width: 40%\"/></p>\n"
+    "<p style=\"text-align:center;\"><img src=\"https://galileounbound.files.wordpress.com/2020/01/snellslaw.jpg?w=2400\" alt=\"image info\" style= \"width: 70%\"/></p>\n"
    ]
   },
   {
