--- a/notebooks/b_coding/Intro to Python/21_NumPy_Arrays.ipynb
+++ b/notebooks/b_coding/Intro to Python/21_NumPy_Arrays.ipynb
@@ -9,6 +9,8 @@
     ]
    },
    "source": [
+    "(NumPy_arrays)=\n",
+    "\n",
     "# NumPy arrays\n",
     "```{index} NumPy arrays\n",
     "```\n",
@@ -382,7 +384,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -396,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
