--- a/notebooks/c_mathematics/basic_maths/2_sets.ipynb
+++ b/notebooks/c_mathematics/basic_maths/2_sets.ipynb
@@ -36,11 +36,11 @@
     "\n",
     "We can extend the logic symbols explained in the {doc}`Logic <logic>` notebook to define set operations.\n",
     "\n",
-    "**Intersection** $\\cap$. The intersection of sets $A$ and $B$ is denoted as $A \\cap B$ and it corresponds to the logical $\\land$ (\"and\"). Its result is a set which contains elements that are common in *both* $A$ and $B$. That is, $\\forall x (x \\in A \\cap B) \\iff ((x \\in A) \\land (x \\in B))$. For example, \\\\( \\{ 1, 2, 3 \\} \\cap \\{ 1, 3, 5 \\} = \\{ 1, 3 \\} \\\\).\n",
+    "**Intersection** $\\cap$. The intersection of sets $A$ and $B$ is denoted as $A \\cap B$ and it corresponds to the logical $\\land$ (\"and\"). Its result is a set which contains elements that are common in *both* $A$ and $B$. That is, $\\forall x (x \\in A \\cap B) \\iff ((x \\in A) \\land (x \\in B))$. For example, $ \\{ 1, 2, 3 \\} \\cap \\{ 1, 3, 5 \\} = \\{ 1, 3 \\} $.\n",
     "\n",
-    "**Union** $\\cup$. The union of sets A and B is denoted as A $\\cup$ B and it corresponds to the logical $\\lor$ (\"or\"). Its result is a set which contains elements which are elements of A or elements of B, i.e. the two sets are \"added\" together. That is, $\\forall x (x \\in A \\cup B) \\iff ((x \\in A) \\lor (x \\in B))$. For example, \\\\( \\{ 1, 2, 3 \\} \\cup \\{ 1, 3, 5 \\} = \\{ 1, 2, 3, 5 \\} \\\\).\n",
+    "**Union** $\\cup$. The union of sets A and B is denoted as A $\\cup$ B and it corresponds to the logical $\\lor$ (\"or\"). Its result is a set which contains elements which are elements of A or elements of B, i.e. the two sets are \"added\" together. That is, $\\forall x (x \\in A \\cup B) \\iff ((x \\in A) \\lor (x \\in B))$. For example, $ \\{ 1, 2, 3 \\} \\cup \\{ 1, 3, 5 \\} = \\{ 1, 2, 3, 5 \\} $.\n",
     "\n",
-    "**Complement** $\\backslash$ or $-$. Similarly to how we can \"add\" sets together, we can also \"subtract\" one set from another. We denote this as $A \\backslash B$ and the result is a set which contains only elements that are in $A$ but not in $B$ (i.e. elements unique to $A$). We can write that as $\\forall x (x \\in A \\backslash B) \\iff ((x \\in A) \\land (x \\notin B))$. For example, $\\{ 1, 2, 3 \\} \\backslash \\{ 1, 3, 5 \\} = \\{ 2 \\}$ and \\\\( \\{ 1, 2 \\} \\backslash \\{ 1, 2 \\} = \\emptyset \\\\)."
+    "**Complement** $\\backslash$ or $-$. Similarly to how we can \"add\" sets together, we can also \"subtract\" one set from another. We denote this as $A \\backslash B$ and the result is a set which contains only elements that are in $A$ but not in $B$ (i.e. elements unique to $A$). We can write that as $\\forall x (x \\in A \\backslash B) \\iff ((x \\in A) \\land (x \\notin B))$. For example, $\\{ 1, 2, 3 \\} \\backslash \\{ 1, 3, 5 \\} = \\{ 2 \\}$ and $ \\{ 1, 2 \\} \\backslash \\{ 1, 2 \\} = \\emptyset $."
    ]
   },
   {
@@ -51,11 +51,12 @@
     "\n",
     "In the examples above we considered finite sets, but more often we will deal with infinite sets. We cannot define such sets by listing all its elements, so our understanding of them must derive from their definition. \n",
     "\n",
-    "A set of **natural numbers** $\\mathbb{N}$ is one such set whose elements are natural numbers \\\\(0, 1, 2, \\dots \\\\), i.e. \n",
+    "A set of **natural numbers** $\\mathbb{N}$ is one such set whose elements are natural numbers $0, 1, 2, \\dots $, i.e. \n",
     "\n",
-    "$$\\mathbb{N} = \\{0, 1, 2, \\dots \\}$$.\n",
+    "$$\\mathbb{N} = \\{0, 1, 2, \\dots \\}$$\n",
     "\n",
-    "```{margin} Extra: [Peano axioms](https://en.wikipedia.org/wiki/Peano_axioms)\n",
+    "\n",
+    "```{margin} [(Extra) Peano axioms](https://en.wikipedia.org/wiki/Peano_axioms)\n",
     "We have just described properties which form the Peano axioms of $\\mathbb{N}$.\n",
     "```\n",
     "\n",
@@ -77,11 +78,11 @@
     "\n",
     "We will state without proof, but the reader can easily check this, that the set $\\mathbb{Z}$ with the operation $+$ is an algebraic structure with properties:\n",
     "\n",
-    "1. **closure**: \\\\( \\forall a,b \\in \\mathbb{Z}, a + b \\in \\mathbb{Z} \\\\)\n",
-    "2. **associativity**: \\\\( \\forall a,b,c \\in \\mathbb{Z}, a + (b + c) = (a+b) + c\\\\)\n",
-    "3. **neutral element**: \\\\( \\exists 0 \\in \\mathbb{Z} : \\forall a \\in \\mathbb{Z}, 0 + a = a + 0 = a \\\\)\n",
-    "4. **inverse element**: \\\\( \\forall a \\in \\mathbb{Z}, \\exists -a \\in \\mathbb{Z} : a + -a = -a + a = 0 \\\\)\n",
-    "5. **commutativity**: \\\\( \\forall a, b \\in \\mathbb{Z}, a + b = b + a \\\\)\n",
+    "1. **closure**: $ \\forall a,b \\in \\mathbb{Z}, a + b \\in \\mathbb{Z} $\n",
+    "2. **associativity**: $ \\forall a,b,c \\in \\mathbb{Z}, a + (b + c) = (a+b) + c$\n",
+    "3. **neutral element**: $ \\exists 0 \\in \\mathbb{Z} : \\forall a \\in \\mathbb{Z}, 0 + a = a + 0 = a $\n",
+    "4. **inverse element**: $ \\forall a \\in \\mathbb{Z}, \\exists -a \\in \\mathbb{Z} : a + -a = -a + a = 0 $\n",
+    "5. **commutativity**: $ \\forall a, b \\in \\mathbb{Z}, a + b = b + a $\n",
     "\n",
     "We call a set equipped with a binary operation which satisfies properties 1-4 a **group**. If the 5th property is satisfied as well we call it a **commutative (Abelian) group**. For addition, it is the basic algebraic structure in which the equation $n + x = m$ can always be solved."
    ]
@@ -130,7 +131,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
