Fix maths rendering in basic_maths section; minor changes to fix_maths script

--- a/notebooks/c_mathematics/basic_maths/4_elementary_functions_1.ipynb
+++ b/notebooks/c_mathematics/basic_maths/4_elementary_functions_1.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "### Quadratic functions\n",
     "\n",
-    "A function given by the formula \\\\( f(x) = ax^2 + bx + c, a \\neq 0 \\\\) is called the **quadratic function**. We call its graph a **parabola**. The roots of a quadratic function are given by:\n",
+    "A function given by the formula $ f(x) = ax^2 + bx + c, a \\neq 0 $ is called the **quadratic function**. We call its graph a **parabola**. The roots of a quadratic function are given by:\n",
     "\n",
     "\n",
     "The quadratic function can be written in vertex form as $f(x) = a \\left ( x + \\frac{b}{2a} \\right ) + c - \\frac{b^2}{4a}$ from which we see that its vertex position is \n",
@@ -358,7 +358,7 @@
     "\n",
     "A function $f: \\mathcal{D} \\to \\mathbb{R}$ is **periodic** with a period $\\tau > 0$ if for all $x \\in \\mathcal{D}$:\n",
     "\n",
-    "1. \\\\( x + \\tau \\in \\mathcal{D} \\\\)\n",
+    "1. $ x + \\tau \\in \\mathcal{D} $\n",
     "2. $f(x + \\tau) = f(x)$.\n",
     "\n",
     "Note that if $\\tau$ is a period of a function, any multiple of it is also a period of the same function. We therefore define the **fundamental period** (also primitive, basic and prime period) as the smallest positive period.\n",
