--- a/notebooks/c_mathematics/basic_maths/3_functions.ipynb
+++ b/notebooks/c_mathematics/basic_maths/3_functions.ipynb
@@ -50,7 +50,7 @@
     "Left is a function, right is not!\n",
     "```\n",
     "\n",
-    "The figure on the left shows a function where \\\\( a \\mapsto f(a) = 1, b \\mapsto f(b) = 2, c \\mapsto f(c)=2 \\\\). The figure on the right does not represent a function since $c$ is assigned both $2$ and $4$.\n",
+    "The figure on the left shows a function where $ a \\mapsto f(a) = 1, b \\mapsto f(b) = 2, c \\mapsto f(c)=2 $. The figure on the right does not represent a function since $c$ is assigned both $2$ and $4$.\n",
     "\n",
     "```{margin} [Cartesian (Descartes) product](https://en.wikipedia.org/wiki/Cartesian_product)\n",
     "The Cartesian product $A \\times B$ of two sets $A$ and $B$ is the set of all ordered pairs $(a, b)$ where $a \\in A, b \\in B$. That is,\n",
@@ -72,7 +72,7 @@
     "\n",
     "$$ G(f) := \\{ (x, f(x)) : x \\in \\mathcal{D} \\}. $$\n",
     "\n",
-    "Therefore, \\\\( G(f) \\subseteq \\mathcal{D} \\times \\mathcal{C} = \\{ (d, c) : d \\in \\mathcal{D}, c \\in \\mathcal{C} \\} \\\\) .\n",
+    "Therefore, $ G(f) \\subseteq \\mathcal{D} \\times \\mathcal{C} = \\{ (d, c) : d \\in \\mathcal{D}, c \\in \\mathcal{C} \\} $ .\n",
     "\n",
     "From above examples we have the following graphs:"
    ]
@@ -172,7 +172,7 @@
     "\n",
     "If we take $E = \\mathcal{C}$, then $f^{-1}(\\mathcal{C}) = \\mathcal{D}$. In other words, we are looking for the values $x \\in \\mathcal{D}$ for which $f(x)$ takes specified values.\n",
     "\n",
-    "Again from the example above, let us consider \\\\( E_1 = \\{ 1 \\}, E_2 = \\{ 2 \\}, E_3 = \\{ 1, 2 \\} \\\\):\n",
+    "Again from the example above, let us consider $ E_1 = \\{ 1 \\}, E_2 = \\{ 2 \\}, E_3 = \\{ 1, 2 \\} $:\n",
     "\n",
     "$$\n",
     "f^{-1}(E_1) = \\{ x \\in \\mathcal{D} : f(x) \\in E_1 \\} = \\{ x \\in \\mathcal{D} : f(x) = 1 \\} = \\{ a \\} \\\\\n",
@@ -223,15 +223,15 @@
     "* - Function\n",
     "  - Natural domain\n",
     "  - Image\n",
-    "* - \\\\( f(x) = x^2 \\\\)\n",
-    "  - \\\\( \\mathbb{R} \\\\)\n",
-    "  - \\\\( [0, + \\infty) \\\\)\n",
-    "* - \\\\( f(x)=\\sqrt{x} \\\\)\n",
-    "  - \\\\( [0, + \\infty) \\\\)\n",
-    "  - \\\\( [0, + \\infty) \\\\)\n",
-    "* - \\\\( f(x) = \\frac{1}{x} \\\\)\n",
-    "  - \\\\( \\mathbb{R} \\backslash \\{ 0 \\} \\\\)\n",
-    "  - \\\\( (- \\infty, 0) \\cup (0, + \\infty) \\\\)\n",
+    "* - $ f(x) = x^2 $\n",
+    "  - $ \\mathbb{R} $\n",
+    "  - $ [0, + \\infty) $\n",
+    "* - $ f(x)=\\sqrt{x} $\n",
+    "  - $ [0, + \\infty) $\n",
+    "  - $ [0, + \\infty) $\n",
+    "* - $ f(x) = \\frac{1}{x} $\n",
+    "  - $ \\mathbb{R} \\backslash \\{ 0 \\} $\n",
+    "  - $ (- \\infty, 0) \\cup (0, + \\infty) $\n",
     "\n",
     "```\n",
     "\n",
@@ -239,10 +239,10 @@
     "\n",
     "Many useful properties of real functions can easily be seen on the graph of the function. One of those is whether a function is **monotonic**, i.e. whether it is always increasing or decreasing on the whole domain. For a function $f : A \\to \\mathbb{R}, A \\subseteq \\mathbb{R}$, we say that it is:\n",
     "\n",
-    "- **increasing** on $A$ if \\\\( (x_1 < x_2) \\Rightarrow (f(x_1) \\leq f(x_2)) \\\\) for all \\\\( x_1, x_2 \\in A \\\\)\n",
-    "- **strictly increasing** on $A$ if \\\\( (x_1 < x_2) \\Rightarrow (f(x_1) < f(x_2)) \\\\) for all \\\\( x_1, x_2 \\in A \\\\)\n",
-    "- **decreasing** on $A$ if \\\\( (x_1 < x_2) \\Rightarrow (f(x_1) \\geq f(x_2)) \\\\) for all \\\\( x_1, x_2 \\in A \\\\)\n",
-    "- **strictly decreasing** on $A$ if \\\\( (x_1 < x_2) \\Rightarrow (f(x_1) > f(x_2)) \\\\) for all \\\\( x_1, x_2 \\in A \\\\)"
+    "- **increasing** on $A$ if $ (x_1 < x_2) \\Rightarrow (f(x_1) \\leq f(x_2)) $ for all $ x_1, x_2 \\in A $\n",
+    "- **strictly increasing** on $A$ if $ (x_1 < x_2) \\Rightarrow (f(x_1) < f(x_2)) $ for all $ x_1, x_2 \\in A $\n",
+    "- **decreasing** on $A$ if $ (x_1 < x_2) \\Rightarrow (f(x_1) \\geq f(x_2)) $ for all $ x_1, x_2 \\in A $\n",
+    "- **strictly decreasing** on $A$ if $ (x_1 < x_2) \\Rightarrow (f(x_1) > f(x_2)) $ for all $ x_1, x_2 \\in A $"
    ]
   },
   {
@@ -378,7 +378,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
