--- a/notebooks/c_mathematics/basic_maths/5_elementary_functions_2.ipynb
+++ b/notebooks/c_mathematics/basic_maths/5_elementary_functions_2.ipynb
@@ -98,7 +98,7 @@
     "$$ (f \\circ f^{-1})(y) = a^{\\log_a y} = y, \\forall y > 0 $$\n",
     "$$ (f^{-1} \\circ f)(x) = \\log_a a^x = x, \\forall x \\in \\mathbb{R} $$\n",
     "\n",
-    "For all $x, y \\in (0, + \\inft), a, b, c \\in (0, 1) \\cup (1, + \\infty)$:\n",
+    "For all $x, y \\in (0, + \\infty), a, b, c \\in (0, 1) \\cup (1, + \\infty)$:\n",
     "\n",
     "$$ \\log_a 1 = 0 $$\n",
     "\n",
@@ -310,7 +310,7 @@
     "```{index} Inverse hyperbolic function (area)\n",
     "```\n",
     "\n",
-    "**Inverse hyperbolic functions** are also called **area functions** so we denote them with the prefix $\\text{ar-}$, e.g. $\\arsinh x$. They are also often denoted as $\\sinh^{-1} x$, for example.\n",
+    "**Inverse hyperbolic functions** are also called **area functions** so we denote them with the prefix $\\text{ar-}$, e.g. $\\text{arsinh} x$. They are also often denoted as $\\sinh^{-1} x$, for example.\n",
     "\n",
     "Hyperbolic functions \n",
     "\n",
@@ -418,7 +418,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
