More maths fixes - calculus

--- a/notebooks/c_mathematics/calculus/Vector_Calculus_MM1.ipynb
+++ b/notebooks/c_mathematics/calculus/Vector_Calculus_MM1.ipynb
@@ -177,7 +177,7 @@
     "\n",
     "**Slide 4**\n",
     "\n",
-    "Define and plot the vector field \\\\(u=(-x^2, \\ -y^2)\\\\) on a quiver plot"
+    "Define and plot the vector field $u=(-x^2, \\ -y^2)$ on a quiver plot"
    ]
   },
   {
@@ -314,7 +314,7 @@
     "\n",
     "Here we will compute the gradient of a scalar field using `sympy.diff`, the gradient at a specific point using `evalf` method, and the gradient at a specific point towards the direction of a unit vector using `numpy.dot`.\n",
     "\n",
-    "Let us consider a scalar field \\\\(h(x,y)=3xy^2\\\\)."
+    "Let us consider a scalar field $h(x,y)=3xy^2$."
    ]
   },
   {
@@ -593,7 +593,7 @@
     "\n",
     "**Slide 22**\n",
     "\n",
-    "Here we compute the Laplacian of a scalar field using `sympy.diff`. Consider a scalar field \\\\(h(x,y)=xy+3\\exp(xy)\\\\):"
+    "Here we compute the Laplacian of a scalar field using `sympy.diff`. Consider a scalar field $h(x,y)=xy+3\\exp(xy)$:"
    ]
   },
   {
