--- a/notebooks/c_mathematics/calculus/Vector_Calculus_MM3.ipynb
+++ b/notebooks/c_mathematics/calculus/Vector_Calculus_MM3.ipynb
@@ -23,9 +23,8 @@
     "**Vector** is a quantity that is described with magnitude and direction. A _vector function_ describes a vector whole value is a function of some independent variable.\n",
     "\n",
     "For example, if $f(t)$ represents a real function of $t$, then vector function of $t$ would be:\n",
-    "\\begin{equation}\n",
-    "\\mathbf{F}(t)=[f_x(t), f_y(t), f_z(t)].\n",
-    "\\end{equation}\n",
+    "\n",
+    "$$ \\mathbf{F}(t)=[f_x(t), f_y(t), f_z(t)] $$\n",
     "\n",
     "We can visualise a vector in Cartesian (x, y, z) cooridante system as an arrow beginning at the origin and ending at point specified by the vector:"
    ]
@@ -91,9 +90,8 @@
     "**Example:**\n",
     "\n",
     "Describe the shape of the geometric representation of the vector function given by\n",
-    "\\begin{equation}\n",
-    "\\mathbf{F}(t)=[t+(t/10)\\sin{t}, t+(t/10)\\cos{t}].\n",
-    "\\end{equation}"
+    "\n",
+    "$$ \\mathbf{F}(t)=[t+(t/10)\\sin{t}, t+(t/10)\\cos{t}] $$"
    ]
   },
   {
@@ -174,16 +172,14 @@
     "```{index} Vector differentiation\n",
     "```\n",
     "To differentiate vector functions, we need to take derivatives of its components:\n",
-    "\\begin{equation}\n",
-    "\\frac{d\\mathbf{F}}{dt}=\\Big(\\frac{df_x}{dt}, \\frac{df_y}{dt}, \\frac{df_z}{dt}\\Big).\n",
-    "\\end{equation}\n",
+    "\n",
+    "$$ \\frac{d\\mathbf{F}}{dt}=\\Big(\\frac{df_x}{dt}, \\frac{df_y}{dt}, \\frac{df_z}{dt}\\Big) $$\n",
     "\n",
     "**Example:**\n",
     "\n",
     "Let's find the derivative of $\\mathbf{F}(t)=[t+(t/10)\\sin{t}, t+(t/10)\\cos{t}]$ with respect to $t$. We will differentiate each component to get:\n",
     "\n",
-    "\\begin{equation}\\frac{d\\mathbf{F}}{dt}=\\Big[\\Big(1+\\frac{1}{10}\\sin{t}+\\frac{t}{10}\\cos{t}\\Big), \\Big(1+\\frac{1}{10}\\cos{t}-\\frac{t}{10}\\sin{t}\\Big) \\Big].\n",
-    "\\end{equation}\n",
+    "$$ \\frac{d\\mathbf{F}}{dt}=\\Big[\\Big(1+\\frac{1}{10}\\sin{t}+\\frac{t}{10}\\cos{t}\\Big), \\Big(1+\\frac{1}{10}\\cos{t}-\\frac{t}{10}\\sin{t}\\Big) \\Big] $$\n",
     "\n",
     "We can also use [SymPy](https://www.sympy.org/en/index.html) package for Python that allows symbolic mathematics. With this package we can get analytical solutions to derivatives in this example. At first we can create separate derivatives:\n",
     "\n",
@@ -266,7 +262,7 @@
     "\n",
     "For that, we will use the position vector $\\mathbf{r}$.  Letting $\\mathbf{F}(t)=\\mathbf{r}(t):$\n",
     "\n",
-    "$$\\frac{d\\mathbf{F}}{dt}=\\frac{d\\mathbf{r}}{dt}=\\lim_{\\delta t \\rightarrow 0}\\frac{\\mathbf{r}(t+\\delta t)-\\mathbf{r}(t)}{\\delta t}=\\Big(\\frac{dx}{dt}, \\frac{dy}{dt}, \\frac{dz}{dt}\\Big).$$\n",
+    "$$\\frac{d\\mathbf{F}}{dt}=\\frac{d\\mathbf{r}}{dt}=\\lim_{\\delta t \\rightarrow 0}\\frac{\\mathbf{r}(t+\\delta t)-\\mathbf{r}(t)}{\\delta t}=\\Big(\\frac{dx}{dt}, \\frac{dy}{dt}, \\frac{dz}{dt}\\Big)$$\n",
     "\n",
     "Let's find tangent $\\mathbf{t}(t)$ to the curve created by $\\mathbf{r}(t)=[10+5\\sin{t}, 10+5\\cos{t}]$ as $t$ goes from 0 to $2\\pi$."
    ]
@@ -343,9 +339,8 @@
    "metadata": {},
    "source": [
     "Unit tangent $\\hat{\\mathbf{t}}$ to the curve $C$ can be defined as:\n",
-    "\\begin{equation}\n",
-    "\\hat{\\mathbf{t}}=\\frac{d\\mathbf{r}/dt}{|d\\mathbf{r}/dt|}.\n",
-    "\\end{equation}\n",
+    "\n",
+    "$$ \\hat{\\mathbf{t}}=\\frac{d\\mathbf{r}/dt}{|d\\mathbf{r}/dt|} $$\n",
     "\n",
     "Unit tangent is a vector in the same direction as vector derivative but its length is one."
    ]
@@ -425,11 +420,11 @@
     "\n",
     "If vectors $\\mathbf{a}$, $\\mathbf{b}$ and scalar $\\lambda$ are functions of $t$, we can then differentiate:\n",
     "\n",
-    "\\\\[\n",
-    "\\frac{d}{dt}(\\mathbf{a+b})=\\frac{d\\mathbf{a}}{dt}+\\frac{d\\mathbf{b}}{dt},\\\\]\n",
-    "\\\\[\\frac{d}{dt}(\\lambda\\mathbf{a})=\\frac{d\\lambda}{dt}\\mathbf{a}+\\frac{d\\mathbf{a}}{dt}\\lambda,\\\\]\n",
-    "\\\\[\\frac{d}{dt}(\\mathbf{a\\cdot b})=\\frac{d\\mathbf{a}}{dt}\\cdot\\mathbf{b}+\\frac{d\\mathbf{b}}{dt}\\cdot\\mathbf{a}=\\frac{d}{dt}(\\mathbf{b\\cdot a}),\\\\]\n",
-    "\\\\[\\frac{d}{dt}(\\mathbf{a\\times b})=\\frac{d\\mathbf{a}}{dt}\\times\\mathbf{b}+\\frac{d\\mathbf{b}}{dt}\\times\\mathbf{a}\\neq \\frac{d}{dt}(\\mathbf{b\\times a}).\\\\]\n",
+    "$$\n",
+    "\\frac{d}{dt}(\\mathbf{a+b})=\\frac{d\\mathbf{a}}{dt}+\\frac{d\\mathbf{b}}{dt},$$\n",
+    "$$\\frac{d}{dt}(\\lambda\\mathbf{a})=\\frac{d\\lambda}{dt}\\mathbf{a}+\\frac{d\\mathbf{a}}{dt}\\lambda,$$\n",
+    "$$\\frac{d}{dt}(\\mathbf{a\\cdot b})=\\frac{d\\mathbf{a}}{dt}\\cdot\\mathbf{b}+\\frac{d\\mathbf{b}}{dt}\\cdot\\mathbf{a}=\\frac{d}{dt}(\\mathbf{b\\cdot a}),$$\n",
+    "$$\\frac{d}{dt}(\\mathbf{a\\times b})=\\frac{d\\mathbf{a}}{dt}\\times\\mathbf{b}+\\frac{d\\mathbf{b}}{dt}\\times\\mathbf{a}\\neq \\frac{d}{dt}(\\mathbf{b\\times a}).$$\n",
     "```"
    ]
   },
@@ -792,9 +787,8 @@
    "metadata": {},
    "source": [
     "Scalar field $\\Omega$ will vary at different rate in different directions. The _directional derivative_ of a unit vector $\\hat{\\mathbf{a}}$ is:\n",
-    "\\begin{equation}\n",
-    "\\frac{\\partial \\Omega }{\\partial a}=\\hat{\\mathbf{a}}\\cdot\\nabla\\Omega.\n",
-    "\\end{equation}\n",
+    "\n",
+    "$$ \\frac{\\partial \\Omega }{\\partial a}=\\hat{\\mathbf{a}}\\cdot\\nabla\\Omega $$\n",
     "\n",
     "For example, we are given scalar field $\\Omega = x^2yz+4xz^2$ and we would like to know its derivative in the direction of $\\mathbf{a}=(2,-1,-1)$ at point $P=(1,-2,-1)$.\n",
     "\n",
@@ -1301,7 +1295,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1315,7 +1309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
